fixed code and graphics

--- a/python/column_water_vapor_analysis.ipynb
+++ b/python/column_water_vapor_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56875814-e369-4c7b-8cd0-7551f8c068ce",
+   "id": "0bdfbbf4-baa2-40ef-9289-18bb31ccef68",
    "metadata": {},
    "source": [
     "# Documentation"
@@ -10,17 +10,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd42114-a2a6-4bd7-9675-f84494ae393d",
+   "id": "b025614f-5b8a-4090-bab9-2979a6da4401",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "**Spencer Ressel**\n",
+    "**Author:** Spencer Ressel\n",
     "\n",
-    "**2021.12.10**                                                         \n",
+    "**Created:** 2021.12.10\n",
     "\n",
+    "***\n",
     "This script recreates Figures 1a and 1b from Ahmed 2021 using ERA5 column \n",
-    "water vapor data. "
+    "water vapor data. \n",
+    "***\n",
+    "\n",
+    "**Inputs:**     \n",
+    "* ERA5 Monthly Column Water Vapor (CWV) and Column-integrated Temperature (CIT) arrays\n",
+    "                \n",
+    "**Outputs:**\n",
+    "                \n",
+    "**Dependencies:**\n",
+    "* None"
    ]
   },
   {
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "id": "e7f123ed-1a88-443c-8e83-9aae8f0d41d4",
    "metadata": {
     "tags": []
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "563c0d0a-7c38-449c-8b3c-3c5c61e305ed",
    "metadata": {
     "tags": []
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "4ce0d0b4-9e8b-4cb4-96b5-30748c85ac9e",
    "metadata": {
     "tags": []
