updated scripts to import auxiliary functions correctly

--- a/python/mjo_data_analysis/column_water_vapor_analysis.ipynb
+++ b/python/mjo_data_analysis/column_water_vapor_analysis.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "**Author:** Spencer Ressel\n",
     "\n",
-    "**Created:** 2021.12.10\n",
+    "**Created:** December 10th, 2021\n",
     "\n",
     "***\n",
     "This script recreates Figures 1a and 1b from Ahmed 2021 using ERA5 column \n",
@@ -44,30 +44,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e7f123ed-1a88-443c-8e83-9aae8f0d41d4",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# %% Imports\n",
+    "# Data analysis\n",
     "import os\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
+    "# Plotting\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec, GridSpecFromSubplotSpec\n",
     "import matplotlib.colors as mcolor\n",
     "import matplotlib.ticker as mticker\n",
     "import matplotlib.patches as mpatches\n",
     "from matplotlib.cm import ScalarMappable\n",
-    "\n",
     "import seaborn as sns\n",
+    "\n",
+    "# Cartopy\n",
     "import cartopy.crs as ccrs\n",
     "from cartopy import feature as cfeature\n",
     "from cartopy import util as cutil\n",
-    "from cartopy.mpl.ticker import LongitudeFormatter, LatitudeFormatter"
+    "from cartopy.mpl.ticker import LongitudeFormatter, LatitudeFormatter\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/disk/eos7/sressel/research/thesis-work/python/auxiliary_functions/')\n",
+    "import ipynb.fs.full.mjo_mean_state_diagnostics as mjo"
    ]
   },
   {
@@ -1789,7 +1795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
