--- a/python/mjo_data_analysis/olr_analysis.ipynb
+++ b/python/mjo_data_analysis/olr_analysis.ipynb
@@ -9,11 +9,15 @@
     "\n",
     "**OLR Analysis**\n",
     "\n",
-    "**Spencer Ressel**\n",
+    "**Author:** Spencer Ressel\n",
     "\n",
-    "Friday, December 10th, 2021\n",
+    "**Created:** December 10th, 2021\n",
     "\n",
-    "This file does analysis on the dataset of Outgoing Longwave Radiation (OLR) from Liebmann and Smith (1994)\n"
+    "---\n",
+    "\n",
+    "This file does analysis on the dataset of Outgoing Longwave Radiation (OLR) from Liebmann and Smith (1994)\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -26,9 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cb662ff5-2acd-48fc-91e2-77b406297fff",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Data Analysis Tools\n",
@@ -37,7 +43,10 @@
     "from scipy import interpolate\n",
     "import scipy.fft as fft\n",
     "import pandas as pd\n",
-    "import mjo_mean_state_diagnostics as mjo\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/disk/eos7/sressel/research/thesis-work/python/auxiliary_functions/')\n",
+    "import ipynb.fs.full.mjo_mean_state_diagnostics as mjo\n",
     "\n",
     "# Plotting tools\n",
     "import matplotlib.pyplot as plt\n",
