--- a/python/mjo_data_analysis/power_spectrum_calculator.ipynb
+++ b/python/mjo_data_analysis/power_spectrum_calculator.ipynb
@@ -56,15 +56,19 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import mask_land as ml\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "import numpy.matlib\n",
     "import math\n",
     "# from netCDF4 import Dataset, num2date\n",
     "import scipy.signal as signal\n",
-    "# from process_signal import ipynb.fs.full.process_signal\n",
-    "from ipynb.fs.full.one_two_one_filter import one_two_one_filter"
+    "\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/disk/eos7/sressel/research/thesis-work/python/auxiliary_functions/')\n",
+    "import ipynb.fs.full.mjo_mean_state_diagnostics as mjo\n",
+    "from ipynb.fs.full.one_two_one_filter import one_two_one_filter\n",
+    "from ipynb.fs.full.mask_land import mask_land as ml"
    ]
   },
   {
@@ -1337,7 +1341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
