--- a/python/mjo_data_analysis/power_spectrum_plotter.ipynb
+++ b/python/mjo_data_analysis/power_spectrum_plotter.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "310a11d9-7a1b-41e6-8f48-3b5b014c1e58",
    "metadata": {
     "tags": []
@@ -62,7 +62,11 @@
     "import matplotlib.colors as mcolors\n",
     "\n",
     "# Other\n",
-    "# from compute_power_spectrum import compute_power_spectrum"
+    "# from compute_power_spectrum import compute_power_spectrum\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/disk/eos7/sressel/research/thesis-work/python/auxiliary_functions/')\n",
+    "import ipynb.fs.full.mjo_mean_state_diagnostics as mjo"
    ]
   },
   {
@@ -371,7 +375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
