--- a/python/mjo_data_analysis/bayesian_inference.ipynb
+++ b/python/mjo_data_analysis/bayesian_inference.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "**Bayesian Inference on MERRA-2 data**\n",
     "\n",
-    "**Spencer Ressel**\n",
+    "**Author:** Spencer Ressel\n",
     "\n",
-    "2023.02.07\n",
+    "**Created:** February 7th, 2023\n",
     "\n",
     "This notebook will be used to perform Bayesian inference on data from the MERRA-2 reanalysis product: https://gmao.gsfc.nasa.gov/reanalysis/MERRA-2/\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "22f408af-d132-4ca6-95c5-2ab593d2a306",
    "metadata": {
     "tags": []
@@ -45,8 +45,9 @@
     "from scipy import signal\n",
     "from scipy import special\n",
     "\n",
-    "import mjo_mean_state_diagnostics as mjo\n",
-    "# import modified_colormap\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/disk/eos7/sressel/research/thesis-work/python/auxiliary_functions/')\n",
+    "import ipynb.fs.full.mjo_mean_state_diagnostics as mjo\n",
     "\n",
     "# Matplotlib\n",
     "from matplotlib import pyplot as plt\n",
@@ -1342,7 +1343,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1356,7 +1357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.2"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
