--- a/python/mjo_data_analysis/process_signal.ipynb
+++ b/python/mjo_data_analysis/process_signal.ipynb
@@ -34,6 +34,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/disk/eos7/sressel/research/thesis-work/python/auxiliary_functions/')\n",
     "import ipynb.fs.full.mjo_mean_state_diagnostics as mjo"
    ]
   },
@@ -221,7 +224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
