new files in other folders

--- a/python/auxiliary_functions/mjo_mean_state_diagnostics.ipynb
+++ b/python/auxiliary_functions/mjo_mean_state_diagnostics.ipynb
@@ -1163,37 +1163,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bd1cb1e9-9e1e-472c-b08e-5de8b91b1556",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def tick_labeller(ticks, direction):\n",
+    "def tick_labeller(ticks, direction, degree_symbol=True):\n",
     "    label = []\n",
     "    for i in range(len(ticks)):\n",
-    "        if direction=='lon':\n",
-    "            if ticks[i] == 0 or np.abs(ticks[i]) >= 180: \n",
-    "                label.append(f\"{np.abs(ticks[i])}°\")\n",
-    "            elif ticks[i] < 0:\n",
-    "                label.append(f\"{np.abs(ticks[i])}°W\")\n",
-    "            elif ticks[i] > 0:\n",
-    "                label.append(f\"{np.abs(ticks[i])}°E\")\n",
-    "        elif direction=='lat':\n",
-    "            if ticks[i] == 0:\n",
-    "                label.append(f\"{np.abs(ticks[i])}°\")\n",
-    "            elif ticks[i] < 0:\n",
-    "                label.append(f\"{np.abs(ticks[i])}°S\")\n",
-    "            elif ticks[i] > 0:\n",
-    "                label.append(f\"{np.abs(ticks[i])}°N\")\n",
+    "        if degree_symbol == True:\n",
+    "            if direction=='lon':\n",
+    "                if ticks[i] == 0 or np.abs(ticks[i]) >= 180: \n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}°\")\n",
+    "                elif ticks[i] < 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}°W\")\n",
+    "                elif ticks[i] > 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}°E\")\n",
+    "            elif direction=='lat':\n",
+    "                if ticks[i] == 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}°\")\n",
+    "                elif ticks[i] < 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}°S\")\n",
+    "                elif ticks[i] > 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}°N\")\n",
+    "        else:\n",
+    "            if direction=='lon':\n",
+    "                if ticks[i] == 0 or np.abs(ticks[i]) >= 180: \n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}\")\n",
+    "                elif ticks[i] < 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}W\")\n",
+    "                elif ticks[i] > 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}E\")\n",
+    "            elif direction=='lat':\n",
+    "                if ticks[i] == 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}\")\n",
+    "                elif ticks[i] < 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}S\")\n",
+    "                elif ticks[i] > 0:\n",
+    "                    label.append(f\"{np.abs(ticks[i]):.0f}N\")\n",
     "    return label"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88cccf21-0e93-4e99-9106-711d4da59f99",
+   "id": "1628de9c-6435-4b91-a9c9-94fcf4d2685e",
    "metadata": {},
    "outputs": [],
    "source": []
