--- a/python/mjo_data_analysis/process_signal.ipynb
+++ b/python/mjo_data_analysis/process_signal.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93af6a38-8e1d-4d63-b53b-5d541029558b",
    "metadata": {},
    "outputs": [],
@@ -58,54 +58,62 @@
     "def process_signal(time, lat, lon, input_signal, time_limits, max_latitude, \n",
     "                   nan_value, nan_big_small):\n",
     "    \n",
-    "    #### Trim data in time and latitude\n",
-    "    print('Sub-Sampling data')\n",
-    "    print('======================')\n",
+    "    # #### Trim data in time and latitude\n",
+    "    # print('Sub-Sampling data')\n",
+    "    # print('======================')\n",
     "\n",
-    "    # Trim time array\n",
-    "    tmin = time_limits[0]\n",
-    "    tmax = time_limits[1]\n",
+    "    # # Trim time array\n",
+    "    # tmin = time_limits[0]\n",
+    "    # tmax = time_limits[1]\n",
     "    \n",
-    "    itmin = np.argwhere(time==tmin).squeeze()\n",
-    "    itmax = np.argwhere(time==tmax).squeeze()\n",
-    "    try:\n",
-    "        time = time[itmin:itmax+1]\n",
-    "    except:\n",
-    "        raise Exception('Specified time limits outside data range')\n",
+    "    # itmin = np.argwhere(time==tmin).squeeze()\n",
+    "    # itmax = np.argwhere(time==tmax).squeeze()\n",
+    "    # try:\n",
+    "    #     time = time[itmin:itmax+1]\n",
+    "    # except:\n",
+    "    #     raise Exception('Specified time limits outside data range')\n",
     "    \n",
     "    \n",
-    "    # Trim latitude array\n",
-    "    latmin_spec = -max_latitude\n",
-    "    imin = np.argwhere(lat==latmin_spec).squeeze()\n",
-    "    imax = np.argwhere(lat==max_latitude).squeeze()\n",
-    "    lat_tropics = lat[imin:imax+1]\n",
+    "    # # Trim latitude array\n",
+    "    # latmin_spec = -max_latitude\n",
+    "    # imin = np.argwhere(lat==latmin_spec).squeeze()\n",
+    "    # imax = np.argwhere(lat==max_latitude).squeeze()\n",
+    "    # lat_tropics = lat[imin:imax+1]\n",
     "    \n",
-    "    # Trim signal array\n",
-    "    signal_time_lat_sampled = input_signal[itmin:itmax+1,imin:imax+1,:]  \n",
+    "    # # Trim signal array\n",
+    "    # signal_time_lat_sampled = input_signal[itmin:itmax+1,imin:imax+1,:]  \n",
+    "    \n",
+    "    signal_time_lat_sampled = input_signal.sel(time=slice(time_limits[0], time_limits[1]), lat=slice(0, max_latitude))\n",
+    "    time = time.sel(time=slice(time_limits[0], time_limits[1]))\n",
+    "    lat_tropics = lat.sel(lat=slice(0, max_latitude))\n",
+    "    print(\"data downsampled\")\n",
     "\n",
-    "    # Replace any NaN values - otherwisw the MJO diagnostics will fail\n",
-    "    signal_time_lat_sampled_nan = mjo.filled_to_nan(signal_time_lat_sampled,\n",
-    "                                                    nan_value,\n",
-    "                                                    nan_big_small)\n",
-    "        \n",
+    "    # # Replace any NaN values - otherwisw the MJO diagnostics will fail\n",
+    "    # signal_time_lat_sampled_nan = mjo.filled_to_nan(signal_time_lat_sampled,\n",
+    "    #                                                 nan_value,\n",
+    "    #                                                 nan_big_small)\n",
+    "\n",
+    "    # signal_time_lat_sampled_nan = np.copy(signal_time_lat_sampled)\n",
+    "    \n",
     "    #### Detrend data\n",
-    "    print('Removing annual cycle')\n",
-    "    # Data without NaN\n",
-    "    if np.sum(np.isnan(signal_time_lat_sampled_nan))==0:\n",
-    "        print(' → No nan data')\n",
-    "        print('======================')\n",
+    "    # print('Removing annual cycle')\n",
+    "    # # Data without NaN\n",
+    "    # if np.sum(np.isnan(signal_time_lat_sampled_nan))==0:\n",
+    "    #     print(' → No nan data')\n",
+    "    #     print('======================')\n",
     "        \n",
-    "    # Data with NaN\n",
-    "    else:\n",
-    "        print('data has nan, can\\'t remove annual cycle')\n",
-    "        print('======================')\n",
+    "    # # Data with NaN\n",
+    "    # else:\n",
+    "    #     print('data has nan, can\\'t remove annual cycle')\n",
+    "    #     print('======================')\n",
     "\n",
     "    # Remove annual cycle and first three harmonics (as in WK99)\n",
-    "    input_signal_tropics_ano,cyc = mjo.remove_anncycle_3d(\n",
-    "                                                signal_time_lat_sampled_nan,\n",
-    "                                                time,\n",
-    "                                                lat_tropics,\n",
-    "                                                lon)\n",
+    "    input_signal_tropics_ano,cyc = mjo.remove_annual_cycle(\n",
+    "                                                signal_time_lat_sampled,\n",
+    "    )\n",
+    "                                                # time,\n",
+    "                                                # lat_tropics,\n",
+    "                                                # lon)\n",
     "    processed_signal = np.copy(input_signal_tropics_ano)\n",
     "    \n",
     "    return time, lat_tropics, lon, processed_signal"
@@ -134,91 +142,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!/usr/bin/env python3\n",
-    "# -*- coding: utf-8 -*-\n",
+    "# #!/usr/bin/env python3\n",
+    "# # -*- coding: utf-8 -*-\n",
     "\n",
-    "###############################################################################\n",
-    "# process_signal.py                                                           # \n",
-    "# Spencer Ressel                                                              #  \n",
-    "# 2022.7.11                                                                   #   \n",
-    "###############################################################################\n",
+    "# ###############################################################################\n",
+    "# # process_signal.py                                                           # \n",
+    "# # Spencer Ressel                                                              #  \n",
+    "# # 2022.7.11                                                                   #   \n",
+    "# ###############################################################################\n",
     "\n",
-    "'''\n",
-    "This script performs a series of signal processing procedures to global \n",
-    "resolution time series data, so that the processed data can be used for \n",
-    "space-time filtering, computing power spectra, etc. \n",
-    "Inputs:        Global resolution, daily timeseries as a 2D numpy array, \n",
-    "               along with the corresponding time, latitude, and longitude\n",
-    "               arrays\n",
-    "               - Current datasets include NOAA OLR (Liebmann and Smith 1996)\n",
-    "                 and TRMM daily precipitation data\n",
-    "              The time limits of interest, in YYYYMMDD format\n",
-    "              The maximum latitude of interest\n",
-    "              The format of the nan data associated with the input data\n",
+    "# '''\n",
+    "# This script performs a series of signal processing procedures to global \n",
+    "# resolution time series data, so that the processed data can be used for \n",
+    "# space-time filtering, computing power spectra, etc. \n",
+    "# Inputs:        Global resolution, daily timeseries as a 2D numpy array, \n",
+    "#                along with the corresponding time, latitude, and longitude\n",
+    "#                arrays\n",
+    "#                - Current datasets include NOAA OLR (Liebmann and Smith 1996)\n",
+    "#                  and TRMM daily precipitation data\n",
+    "#               The time limits of interest, in YYYYMMDD format\n",
+    "#               The maximum latitude of interest\n",
+    "#               The format of the nan data associated with the input data\n",
     "         \n",
-    "Outputs:      Processed time, latitude, longitude, and data arrays\n",
-    "Figures:      None\n",
-    "Dependencies: mjo_mean_state_diagnostics.py\n",
+    "# Outputs:      Processed time, latitude, longitude, and data arrays\n",
+    "# Figures:      None\n",
+    "# Dependencies: mjo_mean_state_diagnostics.py\n",
     "              \n",
-    "'''\n",
-    "#%% Imports\n",
+    "# '''\n",
+    "# #%% Imports\n",
     "\n",
     "\n",
-    "#%% Function\n",
-    "def process_signal(time, lat, lon, input_signal, time_limits, max_latitude, \n",
-    "                   nan_value, nan_big_small):\n",
+    "# #%% Function\n",
+    "# def process_signal(time, lat, lon, input_signal, time_limits, max_latitude, \n",
+    "#                    nan_value, nan_big_small):\n",
     "    \n",
-    "    #### Trim data in time and latitude\n",
-    "    print('Sub-Sampling data')\n",
-    "    print('======================')\n",
+    "#     #### Trim data in time and latitude\n",
+    "#     print('Sub-Sampling data')\n",
+    "#     print('======================')\n",
     "\n",
-    "    # Trim time array\n",
-    "    tmin = time_limits[0]\n",
-    "    tmax = time_limits[1]\n",
+    "#     # Trim time array\n",
+    "#     tmin = time_limits[0]\n",
+    "#     tmax = time_limits[1]\n",
     "    \n",
-    "    itmin = np.argwhere(time==tmin).squeeze()\n",
-    "    itmax = np.argwhere(time==tmax).squeeze()\n",
-    "    try:\n",
-    "        time = time[itmin:itmax+1]\n",
-    "    except:\n",
-    "        raise Exception('Specified time limits outside data range')\n",
+    "#     itmin = np.argwhere(time==tmin).squeeze()\n",
+    "#     itmax = np.argwhere(time==tmax).squeeze()\n",
+    "#     try:\n",
+    "#         time = time[itmin:itmax+1]\n",
+    "#     except:\n",
+    "#         raise Exception('Specified time limits outside data range')\n",
     "    \n",
     "    \n",
-    "    # Trim latitude array\n",
-    "    latmin_spec = -max_latitude\n",
-    "    imin = np.argwhere(lat==latmin_spec).squeeze()\n",
-    "    imax = np.argwhere(lat==max_latitude).squeeze()\n",
-    "    lat_tropics = lat[imin:imax+1]\n",
+    "#     # Trim latitude array\n",
+    "#     latmin_spec = -max_latitude\n",
+    "#     imin = np.argwhere(lat==latmin_spec).squeeze()\n",
+    "#     imax = np.argwhere(lat==max_latitude).squeeze()\n",
+    "#     lat_tropics = lat[imin:imax+1]\n",
     "    \n",
-    "    # Trim signal array\n",
-    "    signal_time_lat_sampled = input_signal[itmin:itmax+1,imin:imax+1,:]  \n",
+    "#     # Trim signal array\n",
+    "#     signal_time_lat_sampled = input_signal[itmin:itmax+1,imin:imax+1,:]  \n",
     "\n",
-    "    # Replace any NaN values - otherwisw the MJO diagnostics will fail\n",
-    "    signal_time_lat_sampled_nan = mjo.filled_to_nan(signal_time_lat_sampled,\n",
-    "                                                    nan_value,\n",
-    "                                                    nan_big_small)\n",
+    "#     # Replace any NaN values - otherwisw the MJO diagnostics will fail\n",
+    "#     signal_time_lat_sampled_nan = mjo.filled_to_nan(signal_time_lat_sampled,\n",
+    "#                                                     nan_value,\n",
+    "#                                                     nan_big_small)\n",
     "        \n",
-    "    #### Detrend data\n",
-    "    print('Removing annual cycle')\n",
-    "    # Data without NaN\n",
-    "    if np.sum(np.isnan(signal_time_lat_sampled_nan))==0:\n",
-    "        print(' → No nan data')\n",
-    "        print('======================')\n",
+    "#     #### Detrend data\n",
+    "#     print('Removing annual cycle')\n",
+    "#     # Data without NaN\n",
+    "#     if np.sum(np.isnan(signal_time_lat_sampled_nan))==0:\n",
+    "#         print(' → No nan data')\n",
+    "#         print('======================')\n",
     "        \n",
-    "    # Data with NaN\n",
-    "    else:\n",
-    "        print('data has nan, can\\'t remove annual cycle')\n",
-    "        print('======================')\n",
+    "#     # Data with NaN\n",
+    "#     else:\n",
+    "#         print('data has nan, can\\'t remove annual cycle')\n",
+    "#         print('======================')\n",
     "\n",
-    "    # Remove annual cycle and first three harmonics (as in WK99)\n",
-    "    input_signal_tropics_ano,cyc = mjo.remove_anncycle_3d(\n",
-    "                                                signal_time_lat_sampled_nan,\n",
-    "                                                time,\n",
-    "                                                lat_tropics,\n",
-    "                                                lon)\n",
-    "    processed_signal = np.copy(input_signal_tropics_ano)\n",
+    "#     # Remove annual cycle and first three harmonics (as in WK99)\n",
+    "#     input_signal_tropics_ano,cyc = mjo.remove_anncycle_3d(\n",
+    "#                                                 signal_time_lat_sampled_nan,\n",
+    "#                                                 time,\n",
+    "#                                                 lat_tropics,\n",
+    "#                                                 lon)\n",
+    "#     processed_signal = np.copy(input_signal_tropics_ano)\n",
     "    \n",
-    "    return time, lat_tropics, lon, processed_signal"
+    "#     return time, lat_tropics, lon, processed_signal"
    ]
   }
  ],
