updating python files

--- a/python/auxiliary_functions/mjo_mean_state_diagnostics.ipynb
+++ b/python/auxiliary_functions/mjo_mean_state_diagnostics.ipynb
@@ -286,8 +286,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9670328a-8345-4b83-991b-cc006b7f6c36",
+   "metadata": {},
+   "source": [
+    "### Remove annual cycle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "71af258a-7f6e-4c45-9da2-dcd662c65291",
    "metadata": {
     "tags": []
@@ -338,7 +346,7 @@
     "    A[evens] = np.sin(2*np.pi*harmonics[:, np.newaxis]*t[np.newaxis, :]/365)\n",
     "\n",
     "    # Matrix multiplication of the A matrix and the input data\n",
-    "    C = np.einsum(\"ij, j...->i...\", A, data)/n_times\n",
+    "    C = 2*np.einsum(\"ij, j...->i...\", A, data)/n_times\n",
     "\n",
     "    # Calculate the annual cycle\n",
     "    annual_cycle = np.einsum(\"ij,i...->j...\", A, C)\n",
@@ -347,6 +355,33 @@
     "    data_deannualized = data - annual_cycle\n",
     "        \n",
     "    return data_deannualized, annual_cycle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6497ae31-8e6e-4982-841f-7b8719572c14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_anncycle(x):  # x is one dimension\n",
+    "    mmax = 7  # (7-1)/2= 3; remove mean and first 3 harmonics\n",
+    "    n = np.size(x)\n",
+    "    # t = np.arange(0,n,1)\n",
+    "    t = np.arange(1, n + 1, 1)\n",
+    "    x = np.matrix(x).T\n",
+    "    A = np.zeros([mmax, n])\n",
+    "    for m in range(1, mmax + 1):\n",
+    "        if m == 1:\n",
+    "            A[m - 1, :] = np.ones([1, n])\n",
+    "        elif np.mod(m, 2) == 1:\n",
+    "            A[m - 1, :] = np.ones([1, n]) * np.sin((m - 1) / 2 * 2 * np.pi / 365 * t)\n",
+    "        else:\n",
+    "            A[m - 1, :] = np.ones([1, n]) * np.cos(m / 2 * 2 * np.pi / 365 * t)\n",
+    "    C = 2*np.matmul(A, x).T / n\n",
+    "    xcycle = np.matmul(C, A).T\n",
+    "    xp = x - xcycle\n",
+    "    return xp, xcycle"
    ]
   },
   {
@@ -1075,6 +1110,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72ab8cd2-3950-4571-823f-ec5a0a1c6b41",
+   "metadata": {},
+   "source": [
+    "## Modifiy colormaps"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "6a6e7368-2443-4f4e-86bc-ebe0d3146365",
@@ -1147,6 +1190,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22a0736b-cde4-48e4-b565-cb891524087f",
+   "metadata": {},
+   "source": [
+    "## Parabolic Cylinder Function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "4b71ea16-b233-427b-b997-127df23905cb",
@@ -1159,6 +1210,14 @@
     "    from scipy import special\n",
     "    poly = special.hermite(order)\n",
     "    return poly(y)*np.exp(-y**2/2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a6f60c-bef2-47ba-a86e-1743286fe6d9",
+   "metadata": {},
+   "source": [
+    "## Tick Labeller"
    ]
   },
   {
