--- a/python/mjo_data_analysis/column_water_vapor_analysis.ipynb
+++ b/python/mjo_data_analysis/column_water_vapor_analysis.ipynb
@@ -1456,6 +1456,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a47bb622-2696-4367-b605-226f1fa06246",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-18 15:39:18,161 INFO Welcome to the CDS\n",
+      "2024-03-18 15:39:18,162 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
+      "2024-03-18 15:39:18,372 INFO Request is queued\n",
+      "2024-03-18 17:40:27,340 INFO Request is completed\n",
+      "2024-03-18 17:40:27,342 INFO Downloading https://download-0004-clone.copernicus-climate.eu/cache-compute-0004/cache/data0/adaptor.mars.internal-1710808792.4517076-16463-2-90c9a9fb-2a99-40e1-b97f-156ac7915cb3.nc to /home/disk/eos7/sressel/research/data/ECMWF/ERA5/era5_land-sea-mask_025deg.nc (2M)\n",
+      "2024-03-18 17:40:30,290 INFO Download rate 691.6K/s                                                                                                                \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Result(content_length=2086244,content_type=application/x-netcdf,location=https://download-0004-clone.copernicus-climate.eu/cache-compute-0004/cache/data0/adaptor.mars.internal-1710808792.4517076-16463-2-90c9a9fb-2a99-40e1-b97f-156ac7915cb3.nc)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cdsapi\n",
+    "\n",
+    "c = cdsapi.Client()\n",
+    "\n",
+    "c.retrieve(\n",
+    "    'reanalysis-era5-single-levels',\n",
+    "    {\n",
+    "        'product_type': 'reanalysis',\n",
+    "        'format': 'netcdf',\n",
+    "        'variable': 'land_sea_mask',\n",
+    "        'year': '2002',\n",
+    "        'month': '01',\n",
+    "        'day': '01',\n",
+    "        'time': '00:00',\n",
+    "        'grid': [0.25, 0.25],  # Specify the regridded resolution\n",
+    "    },\n",
+    "    '/home/disk/eos7/sressel/research/data/ECMWF/ERA5/era5_land-sea-mask_025deg.nc')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "83992141-f35f-4d2c-936d-374152596387",
    "metadata": {},
