restructured NCAR scripts to add to git

--- a/python/auxiliary_functions/rounding_functions.ipynb
+++ b/python/auxiliary_functions/rounding_functions.ipynb
@@ -2,38 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "id": "d25750c0-87ab-42df-8e1c-99648311f66e",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T22:31:33.969783Z",
+     "iopub.status.busy": "2024-07-19T22:31:33.968935Z",
+     "iopub.status.idle": "2024-07-19T22:31:33.983402Z",
+     "shell.execute_reply": "2024-07-19T22:31:33.981924Z",
+     "shell.execute_reply.started": "2024-07-19T22:31:33.969719Z"
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def round_out(value, order):\n",
-    "    import numpy as np\n",
-    "    \n",
-    "    magnitude_names = {\n",
-    "        'thousands'   : -3,\n",
-    "        'hundreds'    : -2,\n",
-    "        'tens'        : -1,\n",
-    "        'ones'        :  0,\n",
-    "        'tenths'      :  1,\n",
-    "        'hundredths'  :  2,\n",
-    "        'thousandths' :  3\n",
-    "        \n",
-    "    }\n",
-    "    \n",
-    "    if type(order) == str:\n",
-    "        order = magnitude_names[order]\n",
-    "    \n",
-    "    if value < 0:\n",
-    "        rounded_val = -np.around(5/10**(order+1)-(value), order)\n",
-    "    elif value > 0:\n",
-    "        rounded_val = np.around(5/10**(order+1)+(value), order)\n",
+    "def round_out(value, order, reference=0):\n",
+    "    # import numpy as np\n",
+    "\n",
+    "    # magnitude_names = {\n",
+    "    #     'thousands'   : -3,\n",
+    "    #     'hundreds'    : -2,\n",
+    "    #     'tens'        : -1,\n",
+    "    #     'ones'        :  0,\n",
+    "    #     'tenths'      :  1,\n",
+    "    #     'hundredths'  :  2,\n",
+    "    #     'thousandths' :  3\n",
+    "\n",
+    "    # }\n",
+    "\n",
+    "    # if type(order) == str:\n",
+    "    #     order = magnitude_names[order]\n",
+    "\n",
+    "    # if value < 0:\n",
+    "    #     rounded_val = -np.around(5/10**(order+1)-(value), order)\n",
+    "    # elif value > 0:\n",
+    "    #     rounded_val = np.around(5/10**(order+1)+(value), order)\n",
+    "    # else:\n",
+    "    #     rounded_val = 0\n",
+    "\n",
+    "    # return rounded_val\n",
+    "    \"\"\"\n",
+    "    Round a number away from a reference value to the nearest specified decimal level.\n",
+    "\n",
+    "    Parameters:\n",
+    "    value (float): The number to be rounded.\n",
+    "    reference (float): The reference value to round away from.\n",
+    "    order (int): The number of decimal places to round to.\n",
+    "\n",
+    "    Returns:\n",
+    "    float: The rounded number.\n",
+    "    \"\"\"\n",
+    "    import math\n",
+    "\n",
+    "    factor = 10**order\n",
+    "\n",
+    "    if value > reference:\n",
+    "        return math.ceil(value * factor) / factor\n",
+    "    elif value < reference:\n",
+    "        return math.floor(value * factor) / factor\n",
     "    else:\n",
-    "        rounded_val = 0\n",
-    "        \n",
-    "    return rounded_val"
+    "        return value"
    ]
   },
   {
@@ -72,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
