changed some files

--- a/python/aquaplanet_analysis/rainfall_climatology.ipynb
+++ b/python/aquaplanet_analysis/rainfall_climatology.ipynb
@@ -44,11 +44,12 @@
     "\n",
     "# Auxiliary functions\n",
     "\n",
+    "sys.path.insert(0, \"/glade/u/home/sressel/thesis_work/python/auxiliary_functions/\")\n",
     "# from auxiliary_functions.modified_colormap import modified_colormap\n",
-    "from auxiliary_functions.bmh_colors import bmh_colors\n",
-    "from auxiliary_functions.one_two_one_filter import one_two_one_filter\n",
-    "from auxiliary_functions.tick_labeller import tick_labeller\n",
-    "from auxiliary_functions.rounding_functions import round_out\n",
+    "from bmh_colors import bmh_colors\n",
+    "from one_two_one_filter import one_two_one_filter\n",
+    "from tick_labeller import tick_labeller\n",
+    "from rounding_functions import round_out\n",
     "\n",
     "print(\"Imports loaded\")"
    ]
